# replyguy-monorepo

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  dump.rdb  env.template  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.cursor/rules/: docs.mdc  mandatory.mdc  project-structure.mdc
.github/workflows/: ci.yml
apps/admin/: package.json
apps/ai_agent/: .gitignore  README.md  example.py  main.py  package.json  postman.json  pyproject.toml  test_api.py
apps/ai_agent/app/: __init__.py  config.py  models.py  nodes.py  pipeline.py  prompts.py
apps/ai_agent/app/models/: __init__.py  llm.py
apps/ai_agent/app/nodes/: user_analysis_nodes.py
apps/ai_agent/app/services/: logging_service.py
apps/ai_agent/app/workflows/: __init__.py  base.py  content_discovery.py  embeddings.py  galaxy_trending.py  intent_analysis.py  reply_generation.py  user_analysis.py  user_context.py  user_summary.py
apps/ai_agent/tests/: README.md  __init__.py  conftest.py  test_embeddings.py  test_reply_generation.py  test_user_summary.py  test_workflows.py
apps/ingestion/: Dockerfile  package.json
apps/validator/: Dockerfile  package.json  tsup.config.ts
apps/web/: miniapp.json  next.config.js  package.json  tailwind.config.ts
apps/worker/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts
infra/aws/: ecs-task-definitions.json  simple-deploy.tf  terraform.tfstate  (+1 more)
scripts/: deploy.sh  dev.sh  docker-entrypoint.sh  setup-server.sh
(+21 files in other folders)
